--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Building web app
       uses: azure/appservice-build@v2
     - name: Deploy web App using GH Action azure/webapps-deploy
@@ -26,4 +27,5 @@ jobs:
       with:
         app-name: painting-test
         publish-profile: <publishData><publishProfile profileName="painting-test - Web Deploy" publishMethod="MSDeploy" publishUrl="painting-test.scm.azurewebsites.net:443" msdeploySite="painting-test" userName="$painting-test" userPWD="ezBkshJFD8ous1RYy0Z9jmFeee79gWc3tBs35SGLbYvs7WdqQwDb2lppfsum" destinationAppUrl="http://painting-test.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="http://windows.azure.com" webSystem="WebSites"><databases /></publishProfile><publishProfile profileName="painting-test - FTP" publishMethod="FTP" publishUrl="ftp://waws-prod-cbr20-003.ftp.azurewebsites.windows.net/site/wwwroot" ftpPassiveMode="True" userName="painting-test\$painting-test" userPWD="ezBkshJFD8ous1RYy0Z9jmFeee79gWc3tBs35SGLbYvs7WdqQwDb2lppfsum" destinationAppUrl="http://painting-test.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="http://windows.azure.com" webSystem="WebSites"><databases /></publishProfile><publishProfile profileName="painting-test - Zip Deploy" publishMethod="ZipDeploy" publishUrl="painting-test.scm.azurewebsites.net:443" userName="$painting-test" userPWD="ezBkshJFD8ous1RYy0Z9jmFeee79gWc3tBs35SGLbYvs7WdqQwDb2lppfsum" destinationAppUrl="http://painting-test.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="http://windows.azure.com" webSystem="WebSites"><databases /></publishProfile><publishProfile profileName="painting-test - ReadOnly - FTP" publishMethod="FTP" publishUrl="ftp://waws-prod-cbr20-003dr.ftp.azurewebsites.windows.net/site/wwwroot" ftpPassiveMode="True" userName="painting-test\$painting-test" userPWD="ezBkshJFD8ous1RYy0Z9jmFeee79gWc3tBs35SGLbYvs7WdqQwDb2lppfsum" destinationAppUrl="http://painting-test.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="http://windows.azure.com" webSystem="WebSites"><databases /></publishProfile></publishData>
+        package: .
 
