--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.x
+    - name: Set up env
+      run: |
+        python3 -m venv venv
+        source venv/bin/activate
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -27,5 +31,4 @@ jobs:
       with:
         app-name: painting-test
         publish-profile: <publishData><publishProfile profileName="painting-test - Web Deploy" publishMethod="MSDeploy" publishUrl="painting-test.scm.azurewebsites.net:443" msdeploySite="painting-test" userName="$painting-test" userPWD="ezBkshJFD8ous1RYy0Z9jmFeee79gWc3tBs35SGLbYvs7WdqQwDb2lppfsum" destinationAppUrl="http://painting-test.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="http://windows.azure.com" webSystem="WebSites"><databases /></publishProfile><publishProfile profileName="painting-test - FTP" publishMethod="FTP" publishUrl="ftp://waws-prod-cbr20-003.ftp.azurewebsites.windows.net/site/wwwroot" ftpPassiveMode="True" userName="painting-test\$painting-test" userPWD="ezBkshJFD8ous1RYy0Z9jmFeee79gWc3tBs35SGLbYvs7WdqQwDb2lppfsum" destinationAppUrl="http://painting-test.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="http://windows.azure.com" webSystem="WebSites"><databases /></publishProfile><publishProfile profileName="painting-test - Zip Deploy" publishMethod="ZipDeploy" publishUrl="painting-test.scm.azurewebsites.net:443" userName="$painting-test" userPWD="ezBkshJFD8ous1RYy0Z9jmFeee79gWc3tBs35SGLbYvs7WdqQwDb2lppfsum" destinationAppUrl="http://painting-test.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="http://windows.azure.com" webSystem="WebSites"><databases /></publishProfile><publishProfile profileName="painting-test - ReadOnly - FTP" publishMethod="FTP" publishUrl="ftp://waws-prod-cbr20-003dr.ftp.azurewebsites.windows.net/site/wwwroot" ftpPassiveMode="True" userName="painting-test\$painting-test" userPWD="ezBkshJFD8ous1RYy0Z9jmFeee79gWc3tBs35SGLbYvs7WdqQwDb2lppfsum" destinationAppUrl="http://painting-test.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="http://windows.azure.com" webSystem="WebSites"><databases /></publishProfile></publishData>
-        package: .
 
